--- a/浏览器缓存机制.md
+++ b/浏览器缓存机制.md
@@ -61,4 +61,4 @@
 
 ##### 浏览器缓存总体流程
 
-![](E:\workfile\share\web-cache\408483-20160525182943272-204994049.png)
+![](C:\Users\HT-hwm\Desktop\web-cache\408483-20160525182943272-204994049.png)
