--- a/浏览器缓存机制.md
+++ b/浏览器缓存机制.md
@@ -17,7 +17,7 @@
 ##### 访问缓存优先级
 
 > 1. 先在内存中查找,如果有,直接加载。
-> 2. 如果内存中不存在,则在硬盘中查找,如果有直接加载。
+> 2. ##### 如果内存中不存在,则在硬盘中查找,如果有直接加载。
 > 3. 如果硬盘中也没有,那么就进行网络请求。
 > 4. 请求获取的资源缓存到硬盘和内存
 
